# voice-ai-chatbot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  routes.py  ws.py
src/voice_chatbot/: __init__.py  config.py  conversation.py  pipeline.py  utils.py
src/voice_chatbot/llm/: __init__.py  anthropic_llm.py  base.py  mock.py  ollama_llm.py  openai_llm.py
src/voice_chatbot/stt/: __init__.py  base.py  mock.py  whisper.py
src/voice_chatbot/tts/: __init__.py  base.py  elevenlabs.py  mock.py
tests/: conftest.py  test_api.py  test_conversation.py  test_llm.py  test_pipeline.py  test_stt.py  test_tts.py
